# Proyecto-POO

./: CMakeLists.txt  PuertaEmbarque.cpp  PuertaEmbarque.h  README.md  TorreControl.cpp  TorreControl.h  aeronave.cpp  aeronave.h  aeropuerto.cpp  aeropuerto.h  main.cpp  pasajero.cpp  pasajero.h  persona.cpp  persona.h  tripulante.cpp  tripulante.h  usuario.cpp  usuario.h  vuelo.cpp  vuelo.h
